Prevent banner image truncation between 730 and 899px viewport width
https://github.com/elifesciences/enhanced-preprints-issues/issues/1281

--- a/assets/sass/patterns/molecules/home-banner.scss
+++ b/assets/sass/patterns/molecules/home-banner.scss
@@ -10,6 +10,7 @@
 
   @media only screen and (min-width: #{get-rem-from-px($bkpt-site--medium)}em) {
     --subjects-height: var(--subjects-height--medium);
+    --banner-default-min-height: calc(440px - var(--subjects-height));
   }
 
   @media only screen and (min-width: #{get-rem-from-px($bkpt-site--wide)}em) {
